nac3parser/src/snapshots/nac3parser__fstring__tests__fstring_parse_selfdocumenting_base.snap
---
source: nac3parser/src/fstring.rs
assertion_line: 327
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: JoinedStr {
        values: [
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "user=",
                    ),
                    kind: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "",
                    ),
                    kind: None,
                },
            },
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: FormattedValue {
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 2,
                            file: FileName(
                                "unknown",
                            ),
                        },
                        custom: (),
                        node: Name {
                            id: "user",
                            ctx: Load,
                        },
                    },
                    conversion: None,
                    format_spec: None,
                },
            },
        ],
    },
}
