nac3parser/src/snapshots/nac3parser__fstring__tests__parse_empty_fstring.snap
---
source: nac3parser/src/fstring.rs
assertion_line: 319
expression: "parse_fstring(\"\").unwrap()"

---
Located {
    location: Location {
        row: 0,
        column: 0,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: Constant {
        value: Str(
            "",
        ),
        kind: None,
    },
}
