nac3parser/src/snapshots/nac3parser__fstring__tests__parse_fstring_not_nested_spec.snap
---
source: nac3parser/src/fstring.rs
assertion_line: 314
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: FormattedValue {
        value: Located {
            location: Location {
                row: 1,
                column: 2,
                file: FileName(
                    "unknown",
                ),
            },
            custom: (),
            node: Name {
                id: "foo",
                ctx: Load,
            },
        },
        conversion: None,
        format_spec: Some(
            Located {
                location: Location {
                    row: 0,
                    column: 0,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "spec",
                    ),
                    kind: None,
                },
            },
        ),
    },
}
