nac3parser/src/snapshots/nac3parser__fstring__tests__parse_fstring_yield_expr.snap
---
source: nac3parser/src/fstring.rs
assertion_line: 403
expression: parse_ast

---
Located {
    location: Location {
        row: 0,
        column: 0,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: FormattedValue {
        value: Located {
            location: Location {
                row: 1,
                column: 2,
                file: FileName(
                    "unknown",
                ),
            },
            custom: (),
            node: Yield {
                value: None,
            },
        },
        conversion: None,
        format_spec: None,
    },
}
